--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "vue": "^2.6.14",
-        "vue-axios": "^3.3.7"
+        "vue-axios": "^3.3.7",
+        "vuelidate": "^0.7.6"
     }
 }
